syntax = "proto3";

option go_package = "genproto/weatherService/";

package weatherService;

service WeatherService {
}
